<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">StoreAndDeliver</string>
    <string name="welcome">Welcome</string>
    <string name="please_enter_your_credentials">Please enter your credentials</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="username_required">Username is required</string>
    <string name="password_required">Password is required</string>
    <string name="success_login">You are successfully logged in</string>
    <string name="invalid_creds">Username or password is invalid</string>
    <string name="email_confirmation_required">You need to confirm your email</string>
    <string name="requests_menu_item">Requests</string>
    <string name="cargo_indicators_menu_item">Cargo indicators</string>
    <string name="request_from">Request from %1$s</string>
    <string name="deliver_by">Deliver the cargo by %1$s</string>
    <string name="store_cargo_from">Store cargo from date %1$s</string>
    <string name="store_cargo_to">Store cargo by date %1$s</string>
    <string name="address_format">%1$s, %2$s, %3$s</string>
    <string name="total_price">Total price: %1$s</string>
    <string-array name="request_type_array">
        <item>Deliver</item>
        <item>Store</item>
    </string-array>
    <string-array name="request_status_array">
        <item>Pending</item>
        <item>In progress</item>
        <item>Completed</item>
    </string-array>
    <string-array name="carrier_request_status_array">
        <item>In progress</item>
        <item>Completed</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="request_type">Request type:</string>
    <string name="from_address">From Address</string>
    <string name="to_address">To Address</string>
    <string name="cargo">Cargo</string>
    <string name="show_cargo_info">Show cargo info</string>
    <string name="hide_cargo_info">Hide cargo info</string>
    <string name="show_cargo_notes">Show cargo notes</string>
    <!--STATUSES-->
    <string name="status_pending">Pending</string>
    <string name="status_active">In Progress</string>
    <string name="status_completed">Completed</string>
    <!--STATUSES-->
    <!--UNITS-->
    <string name="kg">kg</string>
    <string name="pounds">lb</string>
    <string name="metres">m</string>
    <string name="yards">yd</string>
    <string name="celsius">°C</string>
    <string name="kelvin">K</string>
    <string name="fahrenheit">°F</string>
    <string name="percentage">%</string>
    <string name="lux">lx</string>
    <string-array name="weight_units_array">
        <item>Kilograms</item>
        <item>Pounds</item>
    </string-array>
    <string-array name="length_units_array">
        <item>Meters</item>
        <item>Yards</item>
    </string-array>
    <string-array name="temperature_units_array">
        <item>Celsius</item>
        <item>Fahrenheit</item>
        <item>Kelvin</item>
    </string-array>
    <string-array name="humidity_units_array">
        <item>Percentage</item>
    </string-array>
    <string-array name="luminosity_units_array">
        <item>Lux</item>
    </string-array>
    <!--UNITS-->
    <!--CARGO INFO-->
    <string name="cargo_description">Description: %1$s</string>
    <string name="cargo_status">Status: %1$s</string>
    <string name="cargo_amount">Amount: %1$d</string>
    <string name="cargo_weight">Weight: %1$s</string>
    <string name="cargo_length">Length: %1$s</string>
    <string name="cargo_height">Height: %1$s</string>
    <string name="cargo_width">Width: %1$s</string>
    <string name="store_address">Store Address: %1$s</string>
    <string name="store_address_pointer">Store Address</string>
    <string name="security_mode">Security Mode: %1$s</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="settings">Settings</string>
    <!--CARGO INFO-->
    <string name="request_status">Request Status: </string>
    <string name="empty_requests">There is no requests with such status</string>
    <string name="apply_units">Apply</string>
    <string name="cancel">Cancel</string>
    <!--UNITS PANEL -->
    <string name="unit_settings">Unit Settings</string>
    <string name="length_unit">Length Unit:</string>
    <string name="weight_unit">Weight Unit:</string>
    <string name="temperature_unit">Temperature Unit:</string>
    <string name="humidity_unit">Humidity Unit:</string>
    <string name="luminosity_unit">Luminosity Unit:</string>
    <!--UNITS PANEL -->
    <string name="choose_language">Choose language:</string>
    <string name="cargo_indicators">Cargo Indicators</string>
    <string name="empty_indicators">You have not active cargo requests to show the cargo indicators</string>
    <!--CARGO INDICATORS -->
    <string name="cargo_indicators_header">Cargo: %1$s</string>
    <string name="configured_settings"><u>Configured settings</u></string>
    <string name="cargo_snapshots"><u>Cargo snapshots</u></string>
    <!--CARGO INDICATORS -->

    <!--NOTES DIALOG -->
    <string name="notes">Notes</string>
    <string name="empty_notes">There are no notes</string>
    <!--NOTES DIALOG -->
    <string name="close">Close</string>
    <string name="complete">Complete</string>
    <string name="add_note">Add Note</string>
    <string name="note">Note</string>
    <string name="add_note_success">Note was successfully added</string>

    <string name="carriers_management_menu_item">Carriers</string>
    <string name="store_management_menu_item">Stores</string>

    <!--COMPANY ADMIN -->
    <string name="carrier_management"><b>Carrier management</b></string>
    <string name="empty_carriers">No carriers found</string>
    <string name="carrier_username"><b>Username:</b> %1$s</string>
    <string name="carrier_email"><b>Email:</b> %1$s</string>
    <string name="company_name"><b>Company name:</b> %1$s</string>
    <string name="truck_volume"><b>Truck volume:</b> %1$s m^3</string>

    <string name="store_management"><b>Store management</b></string>
    <string name="empty_stores">No stores found</string>
    <string name="store_name"><b>Store name:</b> %1$s</string>
    <string name="store_volume"><b>Store volume:</b> %1$s m^3</string>
    <!--COMPANY ADMIN -->
    <string name="delete">Delete</string>
    <string name="confirm_deletion">Are you sure you want to delete %1$s?</string>
    <string name="log_out">Log Out</string>

    <!-- UPLOAD PHOTO -->
    <string name="select_image">Select Image</string>
    <string name="save">Save</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="upload_success">File uploaded successfully</string>
    <string name="upload_failed">File uploading failed</string>
    <string name="uploading_file">Uploading file…</string>
    <!-- UPLOAD PHOTO -->

    <string name="feedback">Feedback</string>
    <string name="leave_your_feedback">Leave your feedback</string>
    <string name="feedbacks">Feedback</string>
    <string name="rating">Rating: </string>
    <string name="send">Send</string>
    <string name="feedback_validation_message">This field is required</string>
    <string name="empty_feedback_message">No feedback found</string>
    <string name="average_rating">Average rating:</string>
    <string name="feedback_amount">Feedback amount:</string>
</resources>