<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".UploadPhotoActivity">

    <TextView
        android:id="@+id/upload_photo_tw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/upload_photo"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textAlignment="center" />

    <ImageView
        android:id="@+id/image_view_form"
        android:layout_width="fill_parent"
        android:layout_height="250dp"
        android:layout_marginTop="10dp"
        android:adjustViewBounds="true"
        app:layout_constraintTop_toBottomOf="@id/upload_photo_tw"
        app:layout_constraintBottom_toTopOf="@id/save_photo_btn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/image_placeholder" />

    <Button
        android:id="@+id/select_image_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/select_image"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_view_form"/>

    <Button
        android:id="@+id/save_photo_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>