<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".fragments.FeedbackFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/feedback_header_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/leave_your_feedback"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/feedback_header_admin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/feedbacks"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="gone" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cards_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header"
        android:layout_marginTop="15dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/statistics_panel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:padding="8dp">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                app:cardBackgroundColor="#FFC107"
                app:cardCornerRadius="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:background="#FFC107">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp">

                    <TextView
                        android:id="@+id/avg_rating_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/average_rating"
                        android:textColor="#1B2B32"
                        android:textSize="20sp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"/>

                    <TextView
                        android:id="@+id/average_rating_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="3.7"
                        android:textColor="#1B2B32"
                        android:textSize="20sp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintLeft_toRightOf="@id/avg_rating_label"
                        android:layout_marginStart="10dp"/>

                    <ImageView
                        android:id="@+id/star_iv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic__star_rate_24"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintLeft_toRightOf="@id/average_rating_tv"
                        android:layout_marginStart="1dp"
                        app:layout_constraintBottom_toTopOf="@id/feedback_amount_label"
                        />

                    <TextView
                        android:id="@+id/feedback_amount_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/feedback_amount"
                        android:textColor="#1B2B32"
                        android:textSize="20sp"
                        app:layout_constraintTop_toBottomOf="@id/avg_rating_label"
                        app:layout_constraintLeft_toLeftOf="parent"/>

                    <TextView
                        android:id="@+id/feedback_amount_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="2"
                        android:textColor="#1B2B32"
                        android:textSize="20sp"
                        app:layout_constraintTop_toBottomOf="@id/average_rating_tv"
                        app:layout_constraintLeft_toRightOf="@id/feedback_amount_label"
                        android:layout_marginStart="10dp"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_people_24"
                        app:layout_constraintTop_toBottomOf="@id/star_iv"
                        app:layout_constraintLeft_toRightOf="@id/feedback_amount_tv"
                        android:layout_marginStart="1dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/feedback_form_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="gone">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/add_feedback_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                app:cardBackgroundColor="#FFC107"
                app:cardCornerRadius="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:background="#FFC107">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/et_feedback"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/feedback"
                            android:inputType="textMultiLine"
                            android:lines="4"
                            android:textColor="#101010"
                            android:textColorHint="#7A8089" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:text="@string/rating"
                            android:textColor="@color/black"
                            android:textSize="20sp" />

                        <RatingBar
                            android:id="@+id/rBar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:numStars="5"
                            android:progressTint="@color/purple_500"
                            android:stepSize="0.5"
                            android:theme="@style/Widget.AppCompat.RatingBar" />
                    </LinearLayout>

                    <Button
                        android:id="@+id/send_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:background="@color/design_default_color_primary"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:text="@string/send" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>




    <ProgressBar
        android:id="@+id/progressBar_feedback"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:indeterminateTint="@color/design_default_color_primary"
        android:indeterminateTintMode="src_atop"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/cards_wrapper"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/empty_feedback_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/empty_feedback_message"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/feedbackView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cards_wrapper"/>

</androidx.constraintlayout.widget.ConstraintLayout>